# todo-gui

./: .gitignore  LICENSE  README.md
.claude/commands/: implement-todo.md
C#/: .gitignore
C#/Avalonia/ToDo/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  README.md  ToDo.csproj  ToDo.sln  app.manifest
C#/GTK#/TodoApp/: README.md  README_ja.md  TodoApp.csproj
C#/MAUI/ToDo/: README.md  ToDo.sln
C#/Prism/ToDo/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  ToDo.csproj  ToDo.sln
C#/UWP/ToDo/: README.md  ToDo.sln
C#/UnoPlatform/ToDo/: .gitignore  .vsconfig  README.md  README_ja.md  ToDo.sln  global.json
C#/WPF/ToDo/: App.xaml  App.xaml.cs  MainWindow.xaml  README.md  ToDo.csproj
C#/WinForms/ToDo/: Program.cs  README.md  README_ja.md  Theme.cs  ToDo.csproj
C#/Xamarin.Forms/ToDo/: README.md  README_ja.md  ToDo.sln
C++/FLTK/: CMakeLists.txt  README.md  main.cpp
C++/FLTK/src/: data.h  main.cpp  theme.h
C++/FLTK/src/widgets/: tab_menu.cpp  tab_menu.h  todo_input.cpp  todo_input.h  todo_list.cpp  todo_list.h
C++/GTK4/: README.md  README_ja.md
C++/GTK4/src/: app.h  cairo_util.h  data.h  main.cpp  theme.h
C++/GTKmm/: CMakeLists.txt  README.md  README_ja.md  main.cpp
C++/GTKmm/src/: cairo_util.h  data.h  main.cpp  theme.h
C++/GTKmm/src/widgets/: tab_menu.cpp  tab_menu.h  todo_input.cpp  todo_input.h  todo_list.cpp  todo_list.h
C++/ImGui/: CMakeLists.txt  README.md  README_ja.md
C++/ImGui/src/: data.h  main.cpp  theme.h
C++/ImGui/src/widgets/: tab_menu.cpp  tab_menu.h  todo_input.cpp  todo_input.h  todo_list.cpp  todo_list.h
C++/NanoGUI/: main.cpp
C++/QT/: .qmake.stash  Makefile  QT.pro  README.md  data.h  main.cpp  mainwindow.cpp  mainwindow.h  theme.h  todoitemwidget.cpp  todoitemwidget.h  todomodel.cpp  todomodel.h
C++/U++/: README.md
C++/U++/TodoApp/: TodoApp.upp  data.cpp  data.h  main.cpp  theme.h
C++/bgfx-ImGui/: CMakeLists.txt  README.md
C++/bgfx-ImGui/src/: data.h  ime_mac.mm  imgui_bgfx_backend.cpp  imgui_bgfx_backend.h  imgui_font_stub.cpp  main.cpp  metal_window.h  metal_window.mm  stb_impl.cpp  theme.h
C++/bgfx-ImGui/src/widgets/: input.h  tabs.h  todo_item.h
C++/raylib/: README.md  README_ja.md  todo
C++/raylib/src/: data.h  draw_helpers.h  main.cpp  theme.h
C++/wxWidgets/: CMakeLists.txt  README.md
C++/wxWidgets/src/: CMakeLists.txt  Info.plist  data.h  main.cpp  theme.h
Dart/Flutter/todo/: .gitignore  README.md  pubspec.yaml
Go/Fyne/: README.md  README_ja.md  go.mod  go.sum  main.go
Go/Fyne/apptheme/: theme.go
Go/Fyne/data/: model.go
Go/Fyne/ui/: circle_check.go  tab_button.go  todo_row.go
Go/Gio/: README.md  go.mod  go.sum  main.go
Go/Gio/data/: model.go
Go/Gio/theme/: theme.go
Go/Gio/ui/: app.go  input.go  tabs.go  todo_list.go
Go/Go-GTK/: Go-GTK  README.md  README_ja.md  data.go  go.mod  go.sum  input.go  main.go  tabs.go  theme.go  todo_list.go
Go/Lorca/: README.md  go.mod  main.go
Go/Lorca/frontend/: app.js  index.html  style.css
Go/Lorca/model/: todo.go
Go/QtforGo/: README.md  data.go  go.mod  go.sum  main.go  tab_menu.go  theme.go  todo_input.go  todo_list.go
Go/Wails/todo/: README.md  go.mod  main.go  wails.json
Go/Walk/: README.md  README_ja.md  colors.go  data.go  go.mod  go.sum  main.go  todo_row.go
Go/shiny/: README.md  data.go  draw.go  go.mod  go.sum  main.go  render.go  shiny  widget_input.go  widget_tabs.go  widget_todo.go
JavaScript/Carlo/todo/: README.md  README_ja.md  index.html  index.js  package-lock.json  package.json
JavaScript/DeskGap/todo/: README.md  index.html  index.js  package.json
JavaScript/Electron/: README.md
JavaScript/Electron/todo/: index.html  main.js  package-lock.json  package.json  renderer.js  style.css
JavaScript/NWjs/: README.md  README_ja.md  package-lock.json  package.json
JavaScript/NWjs/src/: package.json
Kotlin/ComposeMultiplatform/: README.md  build.gradle.kts  settings.gradle.kts
Python/Flet/: README.md  counter.py  data.py  main.py  theme.py
Python/Kivy/: README.md  README_ja.md  data.py  main.py  theme.py
Python/PyForms/: README.md  main.py  theme.py
Python/PyGTK/: README.md  data.py  main.py  theme.py
Python/PySide/: README.md  README_ja.md  data.py  main.py  theme.py
Python/TkEasyGUI/: README.md  data.py  main.py  theme.py
Python/Toga/: README.md  README_ja.md  data.py  main.py  theme.py
Python/pyqt/: README.md  README_ja.md  data.py  main.py  theme.py
Python/remi/: README.md  README_ja.md  main.py  theme.py
Python/tkinter/: README.md  README_ja.md  data.py  main.py  theme.py
Python/wxPython/: README.md  README_ja.md  data.py  main.py  theme.py
Rust/Azul/: Cargo.toml  README.md
Rust/Azul/src/: data.rs  main.rs  theme.rs
Rust/Azul/src/components/: input.rs  mod.rs  tabs.rs  todo_list.rs
Rust/Dioxus/todo/: Cargo.toml  Dioxus.toml  README.md
Rust/Dioxus/todo/src/: data.rs  main.rs
Rust/Dioxus/todo/src/components/: input.rs  tabs.rs  todo_list.rs
Rust/Freya/: Cargo.toml  README.md
Rust/Leptos/todo/: Cargo.toml  README.md  README_ja.md  index.html  style.css
Rust/Leptos/todo/src/: data.rs  lib.rs
Rust/Leptos/todo/src/components/: input.rs  mod.rs  tabs.rs  todo_list.rs
Rust/egui/: Cargo.toml  README.md  build.rs  index.html
Rust/fui/todo/: Cargo.toml  README.md
Rust/fui/todo/src/: data.rs  main.rs
Rust/fui/todo/src/components/: input.rs  mod.rs  tabs.rs  todo_item.rs
Swift/TodoApp/: Package.swift  README.md  README_ja.md
Zig/GTK/: README.md  build.zig  build.zig.zon
Zig/GTK/src/: ctx.zig  (+3 more)
Zig/Qt/: README.md  README_ja.md  build.zig  build.zig.zon
Zig/imgui/: README.md  README_ja.md  build.zig  build.zig.zon  vendor
Zig/nuklear/: README.md  build.zig  build.zig.zon
Zig/raylib/: README.md  build.zig  build.zig.zon
Zig/wxWidgets/: README.md  build.zig  build.zig.zon
Zig/zgui/: .gitignore  README.md  build.zig  build.zig.zon
ai_docs/: architecture.md  data-struture.md  directory-struture.md  implementation-tasks.md  requirement.md  step-implementation-guide.md  tech-stack.md
design/: ToDoAPP.fig  tokens.md
(+401 files in other folders)
