[package]
name = "todo-azul"
version = "0.1.0"
edition = "2024"

[dependencies]
azul = { git = "https://github.com/fschutt/azul", package = "azul-dll", default-features = false, features = [
    "link-static",
    "fluent",
    "http",
    "zip_support",
    "json",
    "icons",
    "icu",
    "icu_macos",
] }